Created handler logic for infohead placement.